--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -55,7 +55,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form id="reservation" name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first"/><br>
@@ -123,6 +123,8 @@
         </div>
       </div>
     </div>
+
+
   </main>
   <footer>
     <p class="copyrights">
