--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -13,11 +13,10 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="Logo.png"/>
     </div>
     <div class="main-navbar">
-
-      <a href="#" class="active"><span>Accueil</span></a>
+      <!-- <a href="#" class="active"><span>Accueil</span></a> -->
       <a href="#"><span>Détails de l'évènement</span></a>
       <a href="#"><span>À propos</span></a>
       <a href="#"><span>Contact</span></a>
@@ -27,7 +26,7 @@
       </a>
     </div>
   </div>
-  </div>
+
   <main>
     <div class="hero-section">
       <div class="hero-content">
@@ -73,7 +72,7 @@
               <input class="text-control" type="date" id="birthdate" name="birthdate"/><br>
             </div>
             <div class="formData">
-              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"><br>
             </div>
             <p class="text-label" id="locate">A quel tournoi souhaitez-vous participer cette année ?</p>
@@ -118,7 +117,7 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti" />
+            <input class="btn-submit button" type="submit" value="C'est parti" />
           </form>
         </div>
       </div>
